--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "aws-sdk": "^2.49.0",
     "dotenv": "^4.0.0",
+    "express": "^4.15.2",
+    "ngrok": "^2.2.9",
     "raspicam": "^0.2.13"
   },
   "devDependencies": {},
